# livekit-template

./: .dockerignore  .env.example  Dockerfile  README.md  agent.py  docker-compose.yml  get_token.py  pyproject.toml  requirements.txt  server.py  settings.json  setup.sh  start.sh  test_setup.py
client/: package-lock.json  package.json
client/src/: App.tsx  LivekitConnectionForm.tsx
client/src/utils/: settings.ts
utils/: settings.py
